# awsp_ros

./: .gitignore  README.md
awsp_controller/: CMakeLists.txt  README.md  package.xml
awsp_esc_interface/: CMakeLists.txt  package.xml
awsp_fault_detector/: CMakeLists.txt  package.xml
awsp_gnss_l86_interface/: CMakeLists.txt  README.md  package.xml
awsp_gy_88_interface/: CMakeLists.txt  README.md  package.xml
awsp_launch/: CMakeLists.txt  package.xml
awsp_logger/: CMakeLists.txt  package.xml
awsp_msgs/: CMakeLists.txt  package.xml
awsp_msgs/msg/: CartesianError.msg  CartesianLog.msg  CartesianPose.msg  CurrentState.msg  GnssData.msg  GoalCoordinates.msg  Gy88Data.msg  LogInstruction.msg  MotorStatus.msg  ObstacleData.msg  StateMachineStatus.msg
awsp_obstacle_detector/: CMakeLists.txt  package.xml
awsp_path_planner/: CMakeLists.txt  package.xml
awsp_pose_estimator/: CMakeLists.txt  package.xml
awsp_scripts/: README.md  setup_awsp_ws.sh  setup_ros_client.sh  setup_ros_server.sh
awsp_sensor_filter_kit/: CMakeLists.txt  README.md  package.xml
awsp_srvs/: CMakeLists.txt  package.xml
awsp_srvs/srv/: GetConvergence.srv  GetCurrentGoal.srv  GetCurrentState.srv  GoalToJ0.srv  SetGNSSGoal.srv  SetGoalThreshold.srv  UseObstacleAvoidance.srv
awsp_utils/: CMakeLists.txt  package.xml
cartesian_pose/: CMakeLists.txt  README.md  package.xml
catamaran_controller/: CMakeLists.txt  README.md  package.xml
gnss_l86_interface/: CMakeLists.txt  README.md  package.xml
gy_88_interface/: CMakeLists.txt  README.md  package.xml
ros_sensor_filter_kit/: CMakeLists.txt  LICENSE  package.xml
(+116 files in other folders)
